# solarb-agent

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs  types.rs
backend/src/ai/: mod.rs
backend/src/detector/: mod.rs
backend/src/executor/: drift_executor.rs  jupiter.rs  mod.rs
backend/src/risk/: mod.rs
backend/src/scanner/: drift.rs  mod.rs  polymarket.rs
backend/src/wallet/: mod.rs
backend/src/ws/: mod.rs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/setup/: page.tsx
frontend/components/: AgentStats.tsx  AiInsights.tsx  AnimatedBg.tsx  Hero.tsx  LiveFeed.tsx  PnlChart.tsx  PositionCard.tsx  WalletConnect.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: types.ts
