[package]
name = "solarb-agent"
version = "0.1.0"
edition = "2021"
description = "Autonomous arbitrage agent for Solana — Polymarket vs Drift Protocol"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket (Polymarket CLOB stream)
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal arithmetic — CRITICAL: no float rounding errors on financial math
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Config from env
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# ── Sprint 2: on-chain execution ──────────────────────────────────────────────
solana-client = "2.1"
solana-sdk = "2.1"
bs58 = "0.5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
bincode = "1"

[dev-dependencies]
tokio-test = "0.4"
